# governornode

./: .gitignore  LICENSE  README.md  SPEC.md  json-tl-rfc.md  json-tl-schema.json  json_tl.py  pyproject.toml  setup.py
.github/workflows/: test.yml
examples/: basic_usage.py  governance.yaml  json-tl-example-trace.json  react-converted-trace.json  react_loop.py
governornode/: __init__.py  core.py  governor.py  graph.py  policy.py  recorder.py
tests/: test_governor.py  test_json_tl.py
