[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "governornode"
version = "1.0.0"
description = "LangGraph governance wrapper — iteration limits, oscillation detection, flight recorder"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Mike Oller"},
]
keywords = [
    "langgraph",
    "ai-safety",
    "governance",
    "llm-agents",
    "observability",
    "opentelemetry",
    "flight-recorder",
    "json-tl",
    "agent-governance",
    "sre-for-ai",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "langgraph>=1.0.0",
]

[project.optional-dependencies]
yaml = ["pyyaml>=6.0"]
dev = ["pytest>=8.0", "pyyaml>=6.0"]

[project.urls]
Homepage = "https://github.com/mikeoller82/governornode"
Repository = "https://github.com/mikeoller82/governornode"
Issues = "https://github.com/mikeoller82/governornode/issues"

[project.scripts]
json-tl = "governornode.json_tl:main"

[tool.setuptools.packages.find]
include = ["governornode*"]
exclude = ["tests*", "examples*"]

[tool.setuptools.package-data]
governornode = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
